# py-cookiecutter

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt  requirements_dev.txt
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/docs_src/source/: conf.py  index.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_package.py
